--- a/css/homepage.css
+++ b/css/homepage.css
@@ -11,12 +11,12 @@
   height: 600px;
 }
 .agenda-layer .agenda {
-  background-image: -moz-linear-gradient(top,  rgba(27,14,1,0.8) 0%, rgba(27,14,1,0.8) 100%), url(../img/calendar_bg.jpg); /* FF3.6+ */
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(27,14,1,0.8)), color-stop(100%,rgba(27,14,1,0.8))), url(../img/calendar_bg.jpg); /* Chrome,Safari4+ */
-  background-image: -webkit-linear-gradient(top,  rgba(27,14,1,0.8) 0%,rgba(27,14,1,0.8) 100%), url(../img/calendar_bg.jpg); /* Chrome10+,Safari5.1+ */
-  background-image: -o-linear-gradient(top,  rgba(27,14,1,0.8) 0%,rgba(27,14,1,0.8) 100%), url(../img/calendar_bg.jpg); /* Opera 11.10+ */
-  background-image: -ms-linear-gradient(top,  rgba(27,14,1,0.8) 0%,rgba(27,14,1,0.8) 100%), url(../img/calendar_bg.jpg); /* IE10+ */
-  background-image: linear-gradient(to bottom, rgba(27,14,1,0.8) 0%,rgba(27,14,1,0.8) 100%), url(../img/calendar_bg.jpg); /* W3C */
+  background-image: -moz-linear-gradient(top,  rgba(27,14,1,0.8) 0%, rgba(27,14,1,0.8) 100%); /* FF3.6+ */
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(27,14,1,0.8)), color-stop(100%,rgba(27,14,1,0.8))); /* Chrome,Safari4+ */
+  background-image: -webkit-linear-gradient(top,  rgba(27,14,1,0.8) 0%,rgba(27,14,1,0.8) 100%); /* Chrome10+,Safari5.1+ */
+  background-image: -o-linear-gradient(top,  rgba(27,14,1,0.8) 0%,rgba(27,14,1,0.8) 100%); /* Opera 11.10+ */
+  background-image: -ms-linear-gradient(top,  rgba(27,14,1,0.8) 0%,rgba(27,14,1,0.8) 100%); /* IE10+ */
+  background-image: linear-gradient(to bottom, rgba(27,14,1,0.8) 0%,rgba(27,14,1,0.8) 100%); /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#804d3512', endColorstr='#803e2809',GradientType=0 ); /* IE6-9 */
 }
 .agenda-layer {
@@ -255,7 +255,6 @@
   background-repeat: repeat;
   box-sizing: border-box;
   padding: 20px;
-  height: 1100px;
   text-shadow: 0px 2px 4px rgba(0,0,0,.4);
 }
 .section-gallery [role="tabpanel"] {
