--- a/css/styles.css
+++ b/css/styles.css
@@ -363,6 +363,10 @@ header .dropdown-menu.contact a.fa {
   display: block;
   margin: 0 auto;
 }
+/*fix open shimano brand positioning...*/
+.section-footer .sponsor img[src*='open_shimano'] {
+  margin-left: -25px;
+}
 /*fix for a layout out of the standards... :shit: */
 @media (min-width: 992px) {
   .section-footer .col-md-1 {
@@ -440,6 +444,7 @@ header .dropdown-menu.contact a.fa {
   border-color: transparent;
   color: #00adee;
   background-color: transparent;
+  text-shadow: 1px 1px 2px rgba(255,255,255,.2);
 }
 .nav-tabs.link-tabs {
   border-color: transparent;
